[build-system]
requires = ["pdm-backend",]
build-backend = "pdm.backend"

[project]
name = "GazeParser"
version = "0.12.1"
authors = [{name="Hiroyuki Sogo", email="hsogo12600@gmail.com>"},]
maintainers = [{name="Hiroyuki Sogo", email="hsogo12600@gmail.com>"},]
description = "Gaze tracking, parsing and visualization tools"
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
]

dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
    "wxpython",
]

[project.urls]
Homepage = "https://github.com/hsogo/gazeparser"

[tool.pdm.build]
includes = []
excludes = []

[tool.distutils.bdist_wheel]
universal = 1
