#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.68])
AC_INIT([SimpleGazeTracker], [0.5.0])
AM_INIT_AUTOMAKE
AC_CONFIG_SRCDIR([config.h.in])
AC_CONFIG_HEADERS([config.h])

# Checks for programs.
AC_PROG_CXX
AC_PROG_CC

# Checks for libraries.
PKG_PROG_PKG_CONFIG
PKG_CHECK_MODULES([SDL],[sdl >= 1.2])
PKG_CHECK_MODULES([OPENCV],[opencv >= 2.2])
AC_CHECK_LIB([SDL],[SDL_Init])
AC_CHECK_LIB([SDL_ttf],[TTF_Init])
AC_CHECK_LIB([SDL_net],[SDLNet_Init])

# Checks for header files.
AC_CHECK_HEADERS([arpa/inet.h sys/time.h])

# Checks for typedefs, structures, and compiler characteristics.
AC_HEADER_STDBOOL
AC_TYPE_MODE_T

# Checks for library functions.
AC_FUNC_MALLOC
AC_FUNC_STRTOD
AC_CHECK_FUNCS([clock_gettime gettimeofday mkdir pow sqrt strchr strstr strtol])

AC_CONFIG_FILES([makefile])
AC_OUTPUT

